--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         .imge2{
             width: 100px;
         }
+        .madeby{
+            float:left;
+        }
     </style>
 </head>
 
@@ -152,7 +155,7 @@
         </div>
     </div>
 
-    <h5>Made By RAKESH JAAT</h5>
+    <h5 class="madeby">Made By RAKESH JAAT</h5>
 
 
 
