--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             width: 100px;
         }
         .madeby{
-            float:left;
+            float: right;
         }
     </style>
 </head>
